Fix to spacing issue

--- a/css/contact.css
+++ b/css/contact.css
@@ -100,6 +100,7 @@ main {
 .hourscontainer {
 		float: left;
 		width: 50%;
+		padding-bottom: 20px;
 }
 
 #link {
